# kiosk_manager

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
docs/superpowers/plans/: 2026-05-26-splash-screen.md
piboard_kiosk/: __init__.py  app.py  cli.py  config.py  kiosk.py  system.py
scripts/: apply-display-rotation.sh  apply-kiosk-runtime-settings.sh  kiosk-session.sh  start-kiosk-x.sh
systemd/: piboard-admin.service  piboard-kiosk.service
tests/: test_apply_display_rotation_script.py  test_chromium_args.py  test_config.py  test_install_script.py  test_rotation_state.py  test_splash.py  test_system.py
